CSS: Fix image icon alignment

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -93,7 +93,7 @@
 
 #menu img.icon {
   line-height: 1;
-  margin: 0 0.2em;
+  margin: 0 0.5em 0 0.25em;
   width: 1em;
 }
 
